<?xml version="1.0"?>
<package format="3">
  <name>ros2_components_msg</name>
  <version>0.0.0</version>
  <description>Contains message and service definitions used by Kairo3.</description>
  <maintainer email="none@example.de">Lennart Nachtigall</maintainer>
  <license>?</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
   
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
